# cpp-whatisthisgame

./: .gitignore  CMakeLists.txt  README.md  TODO  clean.sh
cmake/: Findclibgame.cmake  Findftgl.cmake  Findlibdrawtext.cmake
res/: assetspec.txt  game2d.frag  game2d.vert  other.frag  other.vert  text.frag  text.vert
src/: assets.cpp  assets.hpp  config.cpp  config.hpp  delta.cpp  delta.hpp  events.cpp  events.hpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  main.cpp  observer.cpp  observer.hpp  rectangle.cpp  rectangle.hpp  renderer.cpp  renderer.hpp  rendering.cpp  rendering.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
src/entities/: background.cpp  background.hpp  bullet.cpp  bullet.hpp  bulletcontroller.cpp  bulletcontroller.hpp  controller.cpp  controller.hpp  enemy.cpp  enemy.hpp  enemycontroller.cpp  enemycontroller.hpp  explodecontroller.cpp  explodecontroller.hpp  fpscounter.cpp  fpscounter.hpp  lifetracker.cpp  lifetracker.hpp  player.cpp  player.hpp  scoretracker.cpp  scoretracker.hpp
src/res/: animation.cpp  animation.hpp  font.cpp  font.hpp  shader.cpp  shader.hpp  spritesheet.cpp  spritesheet.hpp  ssanimation.cpp  ssanimation.hpp  texable.hpp  texture.cpp  texture.hpp
